--- a/ECU.ioc
+++ b/ECU.ioc
@@ -107,8 +107,6 @@ FREERTOS.configUSE_MALLOC_FAILED_HOOK=1
 FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C3.IPParameters=Timing
-I2C3.Timing=0x00C0EAFF
 IWDG1.IPParameters=Prescaler
 IWDG1.Prescaler=IWDG_PRESCALER_8
 KeepUserPlacement=false
@@ -116,21 +114,18 @@ Mcu.CPN=STM32H743VIT6
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=NVIC
-Mcu.IP11=RCC
-Mcu.IP12=SPI1
-Mcu.IP13=SYS
-Mcu.IP14=TIM1
-Mcu.IP15=TIM2
+Mcu.IP10=SYS
+Mcu.IP11=TIM1
+Mcu.IP12=TIM2
 Mcu.IP2=DEBUG
 Mcu.IP3=DMA
 Mcu.IP4=FDCAN1
 Mcu.IP5=FDCAN2
 Mcu.IP6=FREERTOS
-Mcu.IP7=I2C3
-Mcu.IP8=IWDG1
-Mcu.IP9=LPUART1
-Mcu.IPNb=16
+Mcu.IP7=IWDG1
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=13
 Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE4
@@ -146,36 +141,29 @@ Mcu.Pin17=PD12
 Mcu.Pin18=PD13
 Mcu.Pin19=PD14
 Mcu.Pin2=PE6
-Mcu.Pin20=PC9
-Mcu.Pin21=PA8
-Mcu.Pin22=PA9
-Mcu.Pin23=PA10
-Mcu.Pin24=PA11
-Mcu.Pin25=PA12
-Mcu.Pin26=PA13 (JTMS/SWDIO)
-Mcu.Pin27=PA14 (JTCK/SWCLK)
-Mcu.Pin28=PD3
-Mcu.Pin29=PD4
+Mcu.Pin20=PA11
+Mcu.Pin21=PA12
+Mcu.Pin22=PA13 (JTMS/SWDIO)
+Mcu.Pin23=PA14 (JTCK/SWCLK)
+Mcu.Pin24=PD3
+Mcu.Pin25=PD4
+Mcu.Pin26=PD5
+Mcu.Pin27=PD6
+Mcu.Pin28=PB5
+Mcu.Pin29=PB8
 Mcu.Pin3=PH0-OSC_IN (PH0)
-Mcu.Pin30=PD5
-Mcu.Pin31=PD6
-Mcu.Pin32=PD7
-Mcu.Pin33=PB3 (JTDO/TRACESWO)
-Mcu.Pin34=PB4 (NJTRST)
-Mcu.Pin35=PB5
-Mcu.Pin36=PB8
-Mcu.Pin37=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin38=VP_IWDG1_VS_IWDG
-Mcu.Pin39=VP_SYS_VS_tim3
+Mcu.Pin30=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin31=VP_IWDG1_VS_IWDG
+Mcu.Pin32=VP_SYS_VS_tim3
+Mcu.Pin33=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin40=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PC4
 Mcu.Pin9=PC5
-Mcu.PinsNb=42
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
@@ -205,8 +193,6 @@ NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM3_IRQn
 NVIC.TimeBaseIP=TIM3
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-PA10.Mode=Asynchronous
-PA10.Signal=LPUART1_RX
 PA11.Mode=FDCAN_Activate
 PA11.Signal=FDCAN1_RX
 PA12.Mode=FDCAN_Activate
@@ -225,12 +211,6 @@ PA6.Signal=ADCx_INP3
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=S_FREIO
 PA7.Signal=ADCx_INP7
-PA8.GPIOParameters=GPIO_Pu
-PA8.GPIO_Pu=GPIO_PULLUP
-PA8.Mode=I2C
-PA8.Signal=I2C3_SCL
-PA9.Mode=Asynchronous
-PA9.Signal=LPUART1_TX
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=S_ADC_E2
 PB1.Signal=ADCx_INP5
@@ -238,10 +218,6 @@ PB12.Mode=FDCAN_Activate
 PB12.Signal=FDCAN2_RX
 PB13.Mode=FDCAN_Activate
 PB13.Signal=FDCAN2_TX
-PB3\ (JTDO/TRACESWO).Mode=Full_Duplex_Master
-PB3\ (JTDO/TRACESWO).Signal=SPI1_SCK
-PB4\ (NJTRST).Mode=Full_Duplex_Master
-PB4\ (NJTRST).Signal=SPI1_MISO
 PB5.GPIOParameters=PinState,GPIO_Label
 PB5.GPIO_Label=C_RTDS
 PB5.Locked=true
@@ -258,10 +234,6 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=S_ADC_E1
 PC5.Locked=true
 PC5.Signal=ADCx_INP8
-PC9.GPIOParameters=GPIO_Pu
-PC9.GPIO_Pu=GPIO_PULLUP
-PC9.Mode=I2C
-PC9.Signal=I2C3_SDA
 PCC.Checker=true
 PCC.Line=STM32H743/753
 PCC.MCU=STM32H743VITx
@@ -313,8 +285,6 @@ PD6.GPIOParameters=GPIO_Label
 PD6.GPIO_Label=B_RTD
 PD6.Locked=true
 PD6.Signal=GPIO_Input
-PD7.Mode=Full_Duplex_Master
-PD7.Signal=SPI1_MOSI
 PE12.GPIOParameters=GPIO_Label
 PE12.GPIO_Label=S_VEL1
 PE12.Locked=true
@@ -381,7 +351,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_FDCAN2_Init-FDCAN2-false-HAL-true,7-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_FDCAN2_Init-FDCAN2-false-HAL-true,7-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_IWDG1_Init-IWDG1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=37500000
 RCC.AHB12Freq_Value=100000000
 RCC.AHB4Freq_Value=100000000
@@ -484,12 +454,6 @@ SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SH.GPXTI15.0=GPIO_EXTI15
 SH.GPXTI15.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
-SPI1.CalculateBaudRate=390.625 KBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
 TIM1.IPParameters=Prescaler,Period
 TIM1.Period=4000
 TIM1.Prescaler=1799
